--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1",
-    
     "zustand": "^5.0.2"
   },
   "devDependencies": {
